--- a/charts/hms-init/Chart.yaml
+++ b/charts/hms-init/Chart.yaml
@@ -3,10 +3,12 @@ name: hive-metastore
 description: |-
   Helm chart to deploy [hive-metastore](https://hive.apache.org/).
 type: application
-version: 0.0.1
+version: 0.0.2
 appVersion: 3.0.0
 home: https://github.com/bitsondatadev/hive-metastore/chart/ 
 icon: https://hive.apache.org/images/hive_logo_medium.jpg
 maintainers:
   - name: bitsondatadev
     email: brianolsen87@gmail.com
+  - name: boblozano
+    email: bob@devops.center 
