--- a/charts/hms-run/templates/deployment.yaml
+++ b/charts/hms-run/templates/deployment.yaml
@@ -86,8 +86,7 @@ spec:
                 echo "Init apache hive metastore on ${METASTORE_DB_HOSTNAME}:5432"
                 echo "hacky crap that needs to be cleaned up in the container"
                 cd ${HIVE_HOME}/lib
-                ls -alh
-                sleep 100
+                curl -L --output postgresql-42.4.0.jar https://jdbc.postgresql.org/download/postgresql-42.4.0.jar
                 cd -
 
                 /opt/apache-hive-metastore-3.0.0-bin/bin/start-metastore
