hms now split into two helm charts - one for db init, one for running after assuming db is initialized

--- a/charts/hms-dbinit/Chart.yaml
+++ b/charts/hms-dbinit/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: hive-metastore
+name: hive-metastore-dbinit
 description: |-
   Helm chart to deploy [hive-metastore](https://hive.apache.org/).
 type: application
